# fork-agents-at-scale-ark

./: .codecov.yml  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .releasing  CLAUDE.md  CONTRIBUTING.md  README.md  devspace.yaml  version.txt
.claude-plugin/: marketplace.json
.github/: CHANGELOG.md  dependabot.yaml  release-please-config.json  release-please-manifest.json
.github/workflows/: ark_agent.yml  build_docs.yaml  cicd.yaml  deploy.yml  deploy_aws.yml  deploy_gcp.yml  gitleaks.yaml  openspec-flow.yaml  openspec-flow.yml  prepare-release.yaml  promote-to-stable.yaml  publish_docs.yaml  release-on-merge.yaml  sonar_scan.yaml  terraform_apply_aws.yml  terraform_plan_aws.yml
ark/: Dockerfile  Makefile  devspace.yaml  go.mod  go.sum
ark/cmd/: main.go  main_test.go
ark/hack/: dev-pvcs.yaml
ark/scripts/: validate-chart-values.sh
charts/ark-redis-dev/: Chart.yaml  values.yaml
charts/ark-storage-dev/: README.md  values.yaml
charts/ark-tenant/: Chart.yaml  values.yaml
docs/: package-lock.json  package.json
docs/content/: _meta.js
docs/public/: contributors.html
docs/scripts/: gen-contributors.js  validate-ark-yaml-ignore
images/ark-tools/: Dockerfile
lib/ark-sdk/: pyproject.toml
lib/ark-sdk/gen_sdk/overlay/python/: pyproject.toml
lib/ark-sdk/gen_sdk/overlay/python/ark_sdk/: broker.py  client.py  executor.py  executor_app.py  impersonation_patch.py  k8s.py  test_broker.py
lib/ark-sdk/gen_sdk/overlay/python/ark_sdk/auth/: validator.py
lib/ark-sdk/gen_sdk/overlay/python/ark_sdk/extensions/: query.py
lib/ark-sdk/gen_sdk/overlay/python/ark_sdk/models/: kubernetes.py
lib/ark-sdk/gen_sdk/overlay/python/test_overlay/: test_executor_app.py  test_impersonation_patch.py  test_query_extension.py  test_secret_client.py  test_validator.py
samples/: mcp-notion.yaml
samples/a2a/langchain-weather-agent/: pyproject.toml
samples/agents/: hitl-agent.yaml
samples/marketplace/: authenticated-source-rbac.yaml  marketplace-source-editor-binding.yaml
samples/models/: bedrock-api-key.yaml  mock-default.yaml  openai-gateway-secret.yaml
samples/queries/: hitl-direct-write.yaml  hitl-file-write-confirm.yaml  hitl-file-write.yaml  hitl-nested-write.yaml  hitl-query-confirm.yaml  hitl-query.yaml  hitl-test-approval.yaml  query-with-timeout.yaml
samples/tools/: delete-database.yaml  deploy-application.yaml  get-deployment-status.yaml
samples/walkthrough/: README.md  research-query.yaml
scripts/: stamp-version.sh
services/argo-workflows/: README.md
services/ark-api/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  devspace.yaml
services/ark-api/ark-api/: pyproject.toml
services/ark-api/ark-api/src/ark_api/: impersonation_groups_patch.py  main.py
services/ark-api/ark-api/src/ark_api/api/: health.py
services/ark-api/ark-api/src/ark_api/api/v1/: __init__.py  a2a_gateway.py  a2a_tasks.py  agents.py  ark_services.py  arkconfig.py  client_utils.py  events.py  export.py  file_preview.py  marketplace_fetch.py  marketplace_items.py  marketplace_sources.py  mcp_auth.py  mcp_servers.py  models.py  namespaces.py  queries.py  resources.py  secrets.py
services/ark-api/ark-api/src/ark_api/api/v1/a2agw/: manager.py  registry.py
services/ark-api/ark-api/src/ark_api/api/v1/proxy/: __init__.py  proxy.py
services/ark-api/ark-api/src/ark_api/auth/: impersonation_errors.py  middleware.py
services/ark-api/ark-api/src/ark_api/core/: mcp_auth_config.py  permissions.py
services/ark-api/ark-api/src/ark_api/models/: a2a_tasks.py  export.py  marketplace_sources.py  mcp_auth.py  mcp_servers.py  models.py
services/ark-api/ark-api/src/ark_api/services/: mcp_auth_persistence.py
services/ark-api/ark-api/src/ark_api/utils/: query_watch.py
services/ark-api/ark-api/tests/: test_client_pool.py  test_exceptions_impersonation.py  test_file_preview.py  test_health.py  test_impersonation_groups_patch.py  test_marketplace_items.py  test_marketplace_sources.py  test_mcp_auth_config.py  test_mcp_auth_persistence.py  test_middleware_dispatch.py  test_validation_exception_handler.py
services/ark-api/ark-api/tests/api/: test_a2a_agent_card_url.py  test_a2a_tasks.py  test_ark_services_endpoint.py  test_arkconfig.py  test_export.py  test_mcp_auth.py  test_mcp_servers.py  test_resources.py  test_routes.py
services/ark-api/ark-api/tests/api/proxy/: test_proxy.py
services/ark-api/ark-api/tests/services/: test_api_keys.py  test_permissions.py
services/ark-api/ark-api/tests/utils/: test_ark_services.py
services/ark-broker/: README.md  devspace.yaml
services/ark-dashboard/: CLAUDE.md  Dockerfile  devspace.yaml
services/ark-landing-page/: package-lock.json  package.json
services/ark-mcp/: Dockerfile
services/ark-mcp/ark-mcp/: pyproject.toml
services/ark-mcp/ark-mcp/src/ark_mcp/: __main__.py  server.py
services/ark-mcp/ark-mcp/tests/: test_health.py
services/kubernetes-mcp-server/: devspace.yaml
templates/mcp-server/: Dockerfile
templates/models/: azure.yaml  claude.yaml  gemini.yaml  openai.yaml
templates/query/: query.template.yaml
tests/: .chainsaw.yaml  CLAUDE.md
tests/agent-overrides/: chainsaw-test.yaml
tests/apiserver-auth/: README.md  chainsaw-test.yaml
tests/argo-ark-query/: README.md  chainsaw-test.yaml  mock-llm-values.yaml
tests/event-broker-postgres/: README.md  chainsaw-test.yaml
tests/field-selector-metadata-name/: README.md  chainsaw-test.yaml
tests/generation-metadata-only/: README.md  chainsaw-test.yaml
tests/global-ttl/: README.md  chainsaw-test.yaml
tests/llm-tests/: run-multi-provider.sh
tests/memory-selfheal/: README.md  chainsaw-test.yaml
tests/model-bedrock-auth-precedence/: README.md  chainsaw-test.yaml
tests/pytest/: pytest.ini
tests/query-broker-chunks-redis/: README.md  chainsaw-test.yaml
tests/query-broker-chunks-redis-tls/: chainsaw-test.yaml
tests/query-broker-delete-cleanup/: chainsaw-test.yaml
tests/query-broker-delete-cleanup-default/: chainsaw-test.yaml  mock-llm-values.yaml
tests/query-broker-event-delete-cleanup/: README.md  chainsaw-test.yaml
tests/shared/: psql-query.sh
(+679 files in other folders)
