[project]
name = "ark-api"
version = "0.1.66-rc.1"
description = ""
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "bcrypt>=4.0.0",
    "dpath>=2.2.0",
    "fastapi>=0.115.8,<0.137.0",
    "starlette>=1.3.1",
    "kubernetes-asyncio>=33.3.0,<34.0.0",
    "openai>=1.100.2",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "uvicorn>=0.34.0",
    "httpx>=0.24.0",
    "pyhelm3>=0.4.0",
    "kubernetes>=32.0.0,<36.0.0",
    "coverage>=7.10.4",
    "pytest>=8.4.2",
    "a2a-sdk[http-server]>=0.3.0,<1.0.0",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "opentelemetry-instrumentation-fastapi>=0.59b0",
    "opentelemetry-instrumentation-httpx>=0.59b0",
    "opentelemetry-exporter-otlp>=1.38.0",
    "urllib3>=2.6.3",
    "pytest-asyncio>=1.3.0",
    "protobuf>=6.33.5",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "xlrd>=2.0.0",
    "ark-sdk",
]

[tool.uv]
package = true

[tool.uv.sources]
ark-sdk = { path = "out/ark_sdk-0.1.65-py3-none-any.whl" }

[tool.coverage.run]
data_file = "coverage/.coverage"

[tool.coverage.html]
directory = "coverage"

[tool.coverage.lcov]
output = "coverage/lcov.info"
