[project]
name = "ark-mcp"
version = "0.1.0"
description = "Model Context Protocol server for Ark resources"
authors = [
    {name = "McKinsey Agent Platform Team"}
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4.3,<4.0.0",
    "pydantic>=2.0.0",
    "kubernetes-asyncio>=24.0.0,<34.0.0",
    "setuptools>=75.0.0",
    "urllib3>=2.6.0",
    "ark-sdk",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/mckinsey/agents-at-scale-ark"
Documentation = "https://mckinsey.github.io/agents-at-scale-ark/user-guide/samples/mcp-servers/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pyright>=1.1.402",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
ark-mcp = "ark_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ark_mcp"]

# Black configuration
[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'

# Flake8 configuration
[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]

# isort configuration
[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true

# MyPy configuration
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Pytest configuration
[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = [
    "tests"
]

[tool.uv.sources]
ark-sdk = { path = "ark_sdk-0.1.64-py3-none-any.whl" }
