[project]
name = "ark-sdk"
version = "0.1.66-rc.1"
description = "Python SDK for ARK - Agentic Runtime for Kubernetes"
authors = [
  {name = "McKinsey & Company", email = "dave.kerr@quantumblack.com"},
]
readme = "README.md"
keywords = ["kubernetes", "ai", "agents", "mckinsey", "ark", "llm", "automation", "agentic-ai"]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Clustering",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

dependencies = [
  "urllib3 (>=2.1.0,<3.0.0)",
  "python-dateutil (>=2.8.2)",
  "pydantic (>=2)",
  "typing-extensions (>=4.7.1)",
  "kubernetes>=32.0.0",
  "kubernetes_asyncio>=24.2.0",
  "pytest>=7.2.1",
  "build>=1.0.0",
  "fastapi>=0.115.0",
  "httpx>=0.24.0",
  "PyJWT[crypto]>=2.10.0",
  "pydantic-settings>=2.0.0",
  "uvicorn[standard]>=0.24.0",
  "a2a-sdk[http-server]>=0.3.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.2.1",
  "pytest-cov>=4.0.0",
  "mypy>=1.5",
  "types-python-dateutil>=2.8.19.14",
]

[project.urls]
Homepage = "https://github.com/mckinsey/agents-at-scale-ark"
Repository = "https://github.com/mckinsey/agents-at-scale-ark"
Documentation = "https://mckinsey.github.io/agents-at-scale-ark"
"Bug Tracker" = "https://github.com/mckinsey/agents-at-scale-ark/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ark_sdk"]

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[tool.mypy]
files = [
  "ark_sdk",
  #"test",  # auto-generated tests
  "tests", # hand-written tests
]
# TODO: enable "strict" once all these individual checks are passing
# strict = true

# List from: https://mypy.readthedocs.io/en/stable/existing_code.html#introduce-stricter-options
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

## Getting these passing should be easy
strict_equality = true
extra_checks = true

## Strongly recommend enabling this one as soon as you can
check_untyped_defs = true

## These shouldn't be too much additional work, but may be tricky to
## get passing if you use a lot of untyped libraries
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true

### These next few are various gradations of forcing use of type annotations
#disallow_untyped_calls = true
#disallow_incomplete_defs = true
#disallow_untyped_defs = true
#
### This one isn't too hard to get passing, but return on investment is lower
#no_implicit_reexport = true
#
### This one can be tricky to get passing if you use a lot of untyped libraries
#warn_return_any = true

[[tool.mypy.overrides]]
module = [
  "ark_sdk.configuration",
]
warn_unused_ignores = true
strict_equality = true
extra_checks = true
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_reexport = true
warn_return_any = true
